--- a/src/components/Navigation/Navbar.css
+++ b/src/components/Navigation/Navbar.css
@@ -13,7 +13,7 @@ p {
 .NavigationMenuRoot {
     position: relative;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     width: auto;
     z-index: 1;
 }
